--- a/views/login.ejs
+++ b/views/login.ejs
@@ -7,15 +7,7 @@
 </head>
 <body>
     <main>
-        <form action="/sign-up" method="post">
-            <div>
-                <label for="first-name">First Name:</label>
-                <input type="text" id="first-name" name="first_name">
-            </div>
-            <div>
-                <label for="last-name">Last Name:</label>
-                <input type="text" id="last-name" name="last_name">
-            </div>
+        <form action="/login" method="post">
             <div>
                 <label for="username">Username:</label>
                 <input type="text" id="username" name="username">
@@ -23,10 +15,6 @@
             <div>
                 <label for="password">Password:</label>
                 <input type="text" id="password" name="password">
-            </div>
-            <div>
-                <label for="confirm-password">Confirm password:</label>
-                <input type="text" id="confirm-password" name="confirm_password">
             </div>
             <button>Submit</button>
         </form>
