--- a/views/login.ejs
+++ b/views/login.ejs
@@ -8,13 +8,14 @@
 <body>
     <main>
         <form action="/login" method="post">
+            <%- include('./partials/errors') %>
             <div>
                 <label for="username">Username:</label>
                 <input type="text" id="username" name="username">
             </div>
             <div>
                 <label for="password">Password:</label>
-                <input type="text" id="password" name="password">
+                <input type="password" id="password" name="password">
             </div>
             <button>Submit</button>
         </form>
