--- a/views/sign-up.ejs
+++ b/views/sign-up.ejs
@@ -8,6 +8,7 @@
 <body>
     <main>
         <form action="/sign-up" method="post">
+            <%- include('./partials/errors') %>
             <div>
                 <label for="first-name">First Name:</label>
                 <input type="text" id="first-name" name="first_name">
@@ -22,11 +23,11 @@
             </div>
             <div>
                 <label for="password">Password:</label>
-                <input type="text" id="password" name="password">
+                <input type="password" id="password" name="password">
             </div>
             <div>
                 <label for="confirm-password">Confirm password:</label>
-                <input type="text" id="confirm-password" name="confirm_password">
+                <input type="password" id="confirm-password" name="confirm_password">
             </div>
             <button>Submit</button>
         </form>
