--- a/views/sign-up.ejs
+++ b/views/sign-up.ejs
@@ -6,6 +6,7 @@
     <title><%= title %></title>
 </head>
 <body>
+    <%- include('./partials/navbar') %>
     <main>
         <form action="/sign-up" method="post">
             <%- include('./partials/errors') %>
