--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -3,4 +3,7 @@
     <% if(locals.currentUser && locals.currentUser.membership === "signup") { %>
         <a href="/member">Become a member</a>
     <% } %>
+    <% if(locals.currentUser) { %>
+        <a href="/message">Create a new Message</a>
+    <% } %>
 </nav>
