--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -5,5 +5,9 @@
     <% } %>
     <% if(locals.currentUser) { %>
         <a href="/message">Create a new Message</a>
+        <a href="/logout">Logout</a>
+    <% } else { %>
+        <a href="/login">Login</a>
+        <a href="/sign-up">Sign up</a>
     <% } %>
 </nav>
