--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,35 +4,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><%= title %></title>
+    <link rel="stylesheet" href="./styles/reset.css">
+    <link rel="stylesheet" href="./styles/navbar.css">
+    <link rel="stylesheet" href="./styles/index.css">
 </head>
 <body>
+    <%- include('./partials/navbar') %>
     <main>
-        <%- include('./partials/navbar') %>
         <% if(locals.currentUser) {%>
-            <h1>Welcome <%= currentUser.first_name %> <%= currentUser.last_name %></h1>
+            <h1>Welcome <em><%= currentUser.first_name %> <%= currentUser.last_name %> (<%=currentUser.username%>)</em> !</h1>
         <% } %>
-        <h2>HELLO THERE!</h2>
         <section class="messages">
             <% locals.messages.map((message) => { %>
-                <div class="message">
+                <div class="<%= locals.currentUser && locals.currentUser.id === message.user_id ? 'message own-message' : 'message' %>">
                     <div class="info">
-                        <% if(locals.currentUser) {%>
+                        <% if(locals.currentUser && (locals.currentUser.membership !== "signup" || locals.currentUser.id === message.user_id) ) {%>
                             <h2><%= message.first_name %> <%= message.first_name %></h2>
                             <h3><%= message.time %></h3>
                         <% } else { %>
                             <h2>**********</h2>
                             <h3>*****</h3>
                         <% } %>
-                        <% if(locals.currentUser && locals.currentUser.membership === "admin") {%>
-                            <form action="/delete/<%= message.id %>" method="post">
-                                <button>Delete</button>
-                            </form>
-                        <% } %>
                     </div>
                     <div class="content">
-                        <h3><%= message.title %></h3>
-                        <hp><%= message.text %></hp>
+                        <h2><%= message.title %></h2>
+                        <p><%= message.text %></p>
                     </div>
+                    <% if(locals.currentUser && locals.currentUser.membership === "admin") {%>
+                    <form action="/delete/<%= message.id %>" method="post">
+                        <button><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>Delete</title><path d="M19,4H15.5L14.5,3H9.5L8.5,4H5V6H19M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19Z" /></svg></button>
+                    </form>
+                    <% } %>
                 </div>
             <% }) %>
         </section>
