--- a/views/index.ejs
+++ b/views/index.ejs
@@ -21,6 +21,9 @@
                         <% if(locals.currentUser && (locals.currentUser.membership !== "signup" || locals.currentUser.id === message.user_id) ) {%>
                             <h2><%= message.first_name %> <%= message.first_name %></h2>
                             <h3><%= message.time %></h3>
+                            <% if(locals.currentUser.id === message.user_id) { %>
+                            <p class="you">You</p>
+                            <% } %>
                         <% } else { %>
                             <h2>**********</h2>
                             <h3>*****</h3>
