--- a/views/sign-up.ejs
+++ b/views/sign-up.ejs
@@ -4,31 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><%= title %></title>
+    <link rel="stylesheet" href="./styles/reset.css">
+    <link rel="stylesheet" href="./styles/navbar.css">
+    <link rel="stylesheet" href="./styles/forms.css">
 </head>
 <body>
     <%- include('./partials/navbar') %>
     <main>
+        <h1>Sign up</h1>
         <form action="/sign-up" method="post">
             <%- include('./partials/errors') %>
             <div>
                 <label for="first-name">First Name:</label>
-                <input type="text" id="first-name" name="first_name">
+                <input type="text" id="first-name" name="first_name" minlength="2" maxlength="20" required>
             </div>
             <div>
                 <label for="last-name">Last Name:</label>
-                <input type="text" id="last-name" name="last_name">
+                <input type="text" id="last-name" name="last_name" minlength="2" maxlength="20" required>
             </div>
             <div>
                 <label for="username">Username:</label>
-                <input type="text" id="username" name="username">
+                <input type="text" id="username" name="username" minlength="3" maxlength="20" required>
             </div>
             <div>
                 <label for="password">Password:</label>
-                <input type="password" id="password" name="password">
+                <input type="password" id="password" name="password" minlength="6" required>
             </div>
             <div>
                 <label for="confirm-password">Confirm password:</label>
-                <input type="password" id="confirm-password" name="confirm_password">
+                <input type="password" id="confirm-password" name="confirm_password" minlength="6" required>
             </div>
             <button>Submit</button>
         </form>
