add responsive design for phone screens

--- a/public/styles/navbar.css
+++ b/public/styles/navbar.css
@@ -7,14 +7,14 @@ nav {
 }
 
 nav h1 {
-    font-size: 2rem;
+    font-size: max(1.3rem, 2.2vw);
 }
 
 
 nav a:not(.brand) {
     padding: 0.7rem 1rem;
     border-radius: 10px;
-    font-size: 1.3rem;
+    font-size: max(1rem, 1.4vw);
     color: rgb(255, 255, 0);
     transition: transform 250ms ease;
 }
@@ -38,10 +38,17 @@ nav a:last-of-type {
 
 .log {
     display: flex;
-    gap: 2rem;
+    gap: 2vw;
 }
 
 nav a:not(.brand):hover, nav a:not(.brand):focus {
     background-color: grey;
     transform: scale(1.2);
+}
+
+
+@media (max-width: 768px) {
+    nav {
+        padding: 1rem 8px;
+    }
 }
