--- a/public/styles/error.css
+++ b/public/styles/error.css
@@ -7,12 +7,12 @@ main {
 }
 
 main > h1 {
-    font-size: 2.5rem;
+    font-size: max(1.8rem, 2.8vw);
 }
 
 main > a {
     color: red;
-    font-size: 2rem;
+    font-size: max(1.6rem, 2.1vw);
     text-decoration: none;
 }
 
