--- a/public/styles/forms.css
+++ b/public/styles/forms.css
@@ -71,3 +71,41 @@ main > h1 {
     font-size: 2.5rem;
     text-align: center;
 }
+
+.admin {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+}
+
+.admin label {
+    font-size: 1.4rem;
+}
+
+.admin > input {
+    width: auto;
+    transform: scale(2);
+}
+
+.admin > input:focus {
+    outline-color: white;
+    outline-style: solid;
+    outline-width: 1px;
+}
+
+.admin > input:checked {
+    accent-color: red;
+}
+
+@media (max-width: 768px) {
+    form {
+        width: 100%;
+        padding: 2rem 1rem;
+        padding-bottom: 1rem;
+    }
+    main {
+        padding: 2rem 1rem;
+    }
+    
+}
