--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -1,7 +1,7 @@
 .messages {
     padding: 2rem 10vw;
     display: grid;
-    grid-template-columns: repeat( auto-fit, minmax(300px, 1fr) );
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     row-gap: 2rem;
     column-gap: 1rem;
 }
@@ -15,6 +15,15 @@
 
 .info h2 {
     flex: 1;
+    font-size: max(1.1rem, 1.6vw);
+    text-overflow: ellipsis;
+    width: 50%;
+    overflow: hidden;
+    white-space: nowrap; 
+}
+
+.info h3 {
+    font-size: max(1rem, 1.2vw);
 }
 
 .content {
@@ -23,10 +32,11 @@
 
 .content h2 {
     padding-bottom: 0.5rem;
+    font-size: max(1.3rem, 1.6vw);
 }
 
 .content p {
-    font-size: 1.15rem;
+    font-size: max(1rem, 1.3vw);
 }
 
 .you {
@@ -44,6 +54,7 @@
     padding: 1rem;
     border: 2px solid rgb(153, 153, 153);
     border-radius: 10px;
+    max-width: 500px;
 }
 
 em {
@@ -52,8 +63,9 @@ em {
 
 main > h1 {
     text-align: center;
+    font-size: max(1.4rem, 2.5vw);
+    padding-top: 1rem;
 }
-
 
 .own-message {
     border: 2px solid red;
@@ -83,4 +95,12 @@ main > h1 {
     transform: scale(1.2);
     background-color: grey;
     cursor: pointer;
+}
+
+@media (max-width: 768px) {
+    .messages {
+        padding: 2rem 1rem;
+        grid-template-columns: 1fr;
+    }
+    
 }
